puree-tests/src/test/resources/pos/UsedOption.scala
object PcTest {
  def f(): Option[Int] = {
    Option(1)
  }
}
