puree-tests/src/test/resources/neg/Usages1.scala
object Usages1 {
  def o = Option(1)

  def f(): Int = {
    o
    1
  }
}
